fix cilium e2e tests
Signed-off-by: Simon Bein <simontheleg@gmail.com>

--- a/pkg/test/e2e/cilium/testdata/test-app-def.yaml
+++ b/pkg/test/e2e/cilium/testdata/test-app-def.yaml
@@ -27,4 +27,4 @@ spec:
           chartVersion: 4.7.1
           url: https://kubernetes.github.io/ingress-nginx
     version: 1.8.1
-  defaultValues: {}
+  defaultValues: ""
