--- a/charts/iap/templates/ingresses.yaml
+++ b/charts/iap/templates/ingresses.yaml
@@ -23,6 +23,7 @@ metadata:
     target: {{ .name }}
   annotations:
     kubernetes.io/ingress.class: "nginx"
+    {{- if not (.ingress.tlsSecretName) }}
     {{- with $.Values.iap.certIssuer }}
     {{- if eq .kind "ClusterIssuer" }}
     cert-manager.io/cluster-issuer: {{ .name | quote }}
@@ -30,12 +31,17 @@ metadata:
     cert-manager.io/issuer: {{ .name | quote }}
     {{- end }}
     {{- end }}
+    {{- end }}
 {{- if .ingress.annotations }}
 {{ toYaml .ingress.annotations | indent 4 }}
 {{- end }}
 spec:
   tls:
+  {{- if .ingress.tlsSecretName }}
+  - secretName: {{ .ingress.tlsSecretName }}
+  {{- else }}
   - secretName: {{ .name }}-tls
+  {{- end }}
     hosts:
     - {{ .ingress.host | trim }}
   defaultBackend:
