--- a/docs/zz_generated.applicationInstallation.ce.yaml
+++ b/docs/zz_generated.applicationInstallation.ce.yaml
@@ -25,7 +25,8 @@ spec:
     # Name is the namespace to deploy the Application into.
     # Should be a valid lowercase RFC1123 domain name
     name: my-namespace
-  # Values describe overrides for manifest-rendering. It's a free yaml field.
+  # Values describe overrides for manifest-rendering. It is a free yaml field; comments are not preserved.
+  # Deprecated: Use ValuesBlock instead.
   values:
     commonLabels:
       owner: somebody
