--- a/charts/local-kubevirt/templates/clusterrole-kubevirt-operator.yaml
+++ b/charts/local-kubevirt/templates/clusterrole-kubevirt-operator.yaml
@@ -1,4 +1,4 @@
-# Copyright 2023 The Kubermatic Kubernetes Platform contributors.
+# Copyright 2024 The Kubermatic Kubernetes Platform contributors.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -1011,6 +1011,13 @@ rules:
       - get
       - list
       - watch
+  - apiGroups:
+      - kubevirt.io
+    resources:
+      - kubevirts
+    verbs:
+      - get
+      - list
   - apiGroups:
       - subresources.kubevirt.io
     resources:
