--- a/docs/zz_generated.applicationInstallation.ce.yaml
+++ b/docs/zz_generated.applicationInstallation.ce.yaml
@@ -25,12 +25,12 @@ spec:
     # Name is the namespace to deploy the Application into.
     # Should be a valid lowercase RFC1123 domain name
     name: my-namespace
-  # Values describe overrides for manifest-rendering. It is a free yaml field; comments are not preserved.
+  # Values specify values overrides that are passed to helm templating. Comments are not preserved.
   # Deprecated: Use ValuesBlock instead.
   values:
     commonLabels:
       owner: somebody
-  # ValuesBlock describes overrides for manifest-rendering. It is a free yaml field, which preserves comments.
+  # ValuesBlock specifies values overrides that are passed to helm templating. Comments are preserved.
   valuesBlock: |-
     commonLabels:
       owner: somebody
