--- a/charts/backup/velero/templates/daemonset.yaml
+++ b/charts/backup/velero/templates/daemonset.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-{{ if .Values.velero.restic.deploy }}
+{{ if .Values.velero.deployNodeAgent }}
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
@@ -80,7 +80,7 @@ spec:
           mountPath: /credentials/gcp
         {{- end }}
         resources:
-{{ toYaml .Values.velero.restic.resources | indent 10 }}
+{{ toYaml .Values.velero.nodeAgent.resources | indent 10 }}
       volumes:
       - name: host-pods
         hostPath:
@@ -101,9 +101,9 @@ spec:
       securityContext:
         runAsUser: 0
       nodeSelector:
-{{ toYaml .Values.velero.restic.nodeSelector | indent 8 }}
+{{ toYaml .Values.velero.nodeAgent.nodeSelector | indent 8 }}
       affinity:
-{{ toYaml .Values.velero.restic.affinity | indent 8 }}
+{{ toYaml .Values.velero.nodeAgent.affinity | indent 8 }}
       tolerations:
-{{ toYaml .Values.velero.restic.tolerations | indent 8 }}
+{{ toYaml .Values.velero.nodeAgent.tolerations | indent 8 }}
 {{ end }}
