--- a/pkg/ee/default-application-catalog/applicationdefinitions/falco-app.yaml
+++ b/pkg/ee/default-application-catalog/applicationdefinitions/falco-app.yaml
@@ -30,6 +30,13 @@ spec:
       source:
         helm:
           chartName: falco
+          chartVersion: 3.5.0
+          url: https://falcosecurity.github.io/charts
+    version: 0.35.1
+  - template:
+      source:
+        helm:
+          chartName: falco
           chartVersion: 4.1.1
           url: https://falcosecurity.github.io/charts
     version: 0.37.0
