--- a/pkg/ee/default-application-catalog/applicationdefinitions/flux2-app.yaml
+++ b/pkg/ee/default-application-catalog/applicationdefinitions/flux2-app.yaml
@@ -30,6 +30,13 @@ spec:
       source:
         helm:
           chartName: flux2
+          chartVersion: 2.9.2
+          url: https://fluxcd-community.github.io/helm-charts
+    version: 2.0.1
+  - template:
+      source:
+        helm:
+          chartName: flux2
           chartVersion: 2.12.2
           url: https://fluxcd-community.github.io/helm-charts
     version: 2.2.2
