--- a/pkg/ee/default-application-catalog/applicationdefinitions/metallb-app.yaml
+++ b/pkg/ee/default-application-catalog/applicationdefinitions/metallb-app.yaml
@@ -30,6 +30,13 @@ spec:
       source:
         helm:
           chartName: metallb
+          chartVersion: 0.13.10
+          url: https://metallb.github.io/metallb
+    version: v0.13.10
+  - template:
+      source:
+        helm:
+          chartName: metallb
           chartVersion: 0.14.3
           url: https://metallb.github.io/metallb
     version: v0.14.3
