--- a/pkg/ee/default-application-catalog/applicationdefinitions/nginx-app.yaml
+++ b/pkg/ee/default-application-catalog/applicationdefinitions/nginx-app.yaml
@@ -30,6 +30,13 @@ spec:
       source:
         helm:
           chartName: ingress-nginx
+          chartVersion: 4.7.1
+          url: https://kubernetes.github.io/ingress-nginx
+    version: 1.8.1
+  - template:
+      source:
+        helm:
+          chartName: ingress-nginx
           chartVersion: 4.9.1
           url: https://kubernetes.github.io/ingress-nginx
     version: 1.9.6
