set annotation for Hubble, bring Makefile in-sync with manual updated manifest

--- a/addons/values-hubble.yaml
+++ b/addons/values-hubble.yaml
@@ -26,6 +26,8 @@ hubble:
     enabled: true
   ui:
     enabled: true
+    podAnnotations:
+      cluster-autoscaler.kubernetes.io/safe-to-evict-local-volumes: tmp-dir
 
 kubeProxyReplacement: strict
 agent: false
