--- a/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_seeds.yaml
@@ -2153,6 +2153,13 @@ spec:
                     reports:
                       additionalProperties:
                         properties:
+                          format:
+                            default: csv
+                            description: Format is the file format of the generated report, one of "csv" or "json" (defaults to "csv").
+                            enum:
+                              - csv
+                              - json
+                            type: string
                           interval:
                             default: 7
                             description: |-
