--- a/pkg/crd/k8c.io/kubermatic.k8c.io_allowedregistries.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_allowedregistries.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.14.0
     kubermatic.k8c.io/location: master
   name: allowedregistries.kubermatic.k8c.io
 spec:
@@ -29,10 +29,19 @@ spec:
           description: AllowedRegistry is the object representing an allowed registry.
           properties:
             apiVersion:
-              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              description: |-
+                APIVersion defines the versioned schema of this representation of an object.
+                Servers should convert recognized schemas to the latest internal value, and
+                may reject unrecognized values.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
               type: string
             kind:
-              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              description: |-
+                Kind is a string value representing the REST resource this object represents.
+                Servers may infer this from the endpoint the client submits requests to.
+                Cannot be updated.
+                In CamelCase.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
               type: string
             metadata:
               type: object
@@ -40,7 +49,9 @@ spec:
               description: Spec describes the desired state for an allowed registry.
               properties:
                 registryPrefix:
-                  description: RegistryPrefix contains the prefix of the registry which will be allowed. User clusters will be able to deploy only images which are prefixed with one of the allowed image registry prefixes.
+                  description: |-
+                    RegistryPrefix contains the prefix of the registry which will be allowed. User clusters will be able to deploy
+                    only images which are prefixed with one of the allowed image registry prefixes.
                   type: string
               required:
                 - registryPrefix
