--- a/pkg/crd/k8c.io/kubermatic.k8c.io_addonconfigs.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_addonconfigs.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.14.0
     kubermatic.k8c.io/location: master
   name: addonconfigs.kubermatic.k8c.io
 spec:
@@ -22,13 +22,26 @@ spec:
       name: v1
       schema:
         openAPIV3Schema:
-          description: AddonConfig specifies addon configuration. Addons can be installed without a matching AddonConfig, but they will be missing a logo, description and the potentially necessary form fields in the KKP dashboard to make the addon comfortable to use.
+          description: |-
+            AddonConfig specifies addon configuration. Addons can be installed without
+            a matching AddonConfig, but they will be missing a logo, description and
+            the potentially necessary form fields in the KKP dashboard to make the
+            addon comfortable to use.
           properties:
             apiVersion:
-              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              description: |-
+                APIVersion defines the versioned schema of this representation of an object.
+                Servers should convert recognized schemas to the latest internal value, and
+                may reject unrecognized values.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
               type: string
             kind:
-              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              description: |-
+                Kind is a string value representing the REST resource this object represents.
+                Servers may infer this from the endpoint the client submits requests to.
+                Cannot be updated.
+                In CamelCase.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
               type: string
             metadata:
               type: object
@@ -67,7 +80,9 @@ spec:
                   description: LogoFormat contains logo format of the configured addon, i.e. svg+xml
                   type: string
                 shortDescription:
-                  description: ShortDescription of the configured addon that contains more detailed information about the addon, it will be displayed in the addon details view in the UI
+                  description: |-
+                    ShortDescription of the configured addon that contains more detailed information about the addon,
+                    it will be displayed in the addon details view in the UI
                   type: string
               type: object
           type: object
