--- a/pkg/crd/k8c.io/kubermatic.k8c.io_ipamallocations.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_ipamallocations.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.14.0
     kubermatic.k8c.io/location: master,seed
   name: ipamallocations.kubermatic.k8c.io
 spec:
@@ -22,26 +22,43 @@ spec:
       name: v1
       schema:
         openAPIV3Schema:
-          description: IPAMAllocation is the object representing an allocation from an IPAMPool made for a particular KKP user cluster.
+          description: |-
+            IPAMAllocation is the object representing an allocation from an IPAMPool
+            made for a particular KKP user cluster.
           properties:
             apiVersion:
-              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              description: |-
+                APIVersion defines the versioned schema of this representation of an object.
+                Servers should convert recognized schemas to the latest internal value, and
+                may reject unrecognized values.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
               type: string
             kind:
-              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              description: |-
+                Kind is a string value representing the REST resource this object represents.
+                Servers may infer this from the endpoint the client submits requests to.
+                Cannot be updated.
+                In CamelCase.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
               type: string
             metadata:
               type: object
             spec:
-              description: IPAMAllocationSpec specifies an allocation from an IPAMPool made for a particular KKP user cluster.
+              description: |-
+                IPAMAllocationSpec specifies an allocation from an IPAMPool
+                made for a particular KKP user cluster.
               properties:
                 addresses:
-                  description: Addresses are the IP address ranges that are being used for the allocation. Set when "type=range".
+                  description: |-
+                    Addresses are the IP address ranges that are being used for the allocation.
+                    Set when "type=range".
                   items:
                     type: string
                   type: array
                 cidr:
-                  description: CIDR is the CIDR that is being used for the allocation. Set when "type=prefix".
+                  description: |-
+                    CIDR is the CIDR that is being used for the allocation.
+                    Set when "type=prefix".
                   pattern: ((^((([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5]))/([0-9]|[1-2][0-9]|3[0-2])$)|(^(([0-9a-fA-F]{1,4}:){7,7}[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,7}:|([0-9a-fA-F]{1,4}:){1,6}:[0-9a-fA-F]{1,4}|([0-9a-fA-F]{1,4}:){1,5}(:[0-9a-fA-F]{1,4}){1,2}|([0-9a-fA-F]{1,4}:){1,4}(:[0-9a-fA-F]{1,4}){1,3}|([0-9a-fA-F]{1,4}:){1,3}(:[0-9a-fA-F]{1,4}){1,4}|([0-9a-fA-F]{1,4}:){1,2}(:[0-9a-fA-F]{1,4}){1,5}|[0-9a-fA-F]{1,4}:((:[0-9a-fA-F]{1,4}){1,6})|:((:[0-9a-fA-F]{1,4}){1,7}|:))/([0-9]|[0-9][0-9]|1[0-1][0-9]|12[0-8])$))
                   type: string
                 dc:
