--- a/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_kubermaticsettings.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.14.0
     kubermatic.k8c.io/location: master
   name: kubermaticsettings.kubermatic.k8c.io
 spec:
@@ -22,13 +22,25 @@ spec:
       name: v1
       schema:
         openAPIV3Schema:
-          description: KubermaticSetting is the type representing a KubermaticSetting. These settings affect the KKP dashboard and are not relevant when using the Kube API on the master/seed clusters directly.
+          description: |-
+            KubermaticSetting is the type representing a KubermaticSetting.
+            These settings affect the KKP dashboard and are not relevant when
+            using the Kube API on the master/seed clusters directly.
           properties:
             apiVersion:
-              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              description: |-
+                APIVersion defines the versioned schema of this representation of an object.
+                Servers should convert recognized schemas to the latest internal value, and
+                may reject unrecognized values.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
               type: string
             kind:
-              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              description: |-
+                Kind is a string value representing the REST resource this object represents.
+                Servers may infer this from the endpoint the client submits requests to.
+                Cannot be updated.
+                In CamelCase.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
               type: string
             metadata:
               type: object
@@ -43,10 +55,14 @@ spec:
                   description: CleanupOptions control what happens when a cluster is deleted via the dashboard.
                   properties:
                     enabled:
-                      description: Enable checkboxes that allow the user to ask for LoadBalancers and PVCs to be deleted in order to not leave potentially expensive resources behind.
+                      description: |-
+                        Enable checkboxes that allow the user to ask for LoadBalancers and PVCs
+                        to be deleted in order to not leave potentially expensive resources behind.
                       type: boolean
                     enforced:
-                      description: If enforced is set to true, the cleanup of LoadBalancers and PVCs is enforced.
+                      description: |-
+                        If enforced is set to true, the cleanup of LoadBalancers and PVCs is
+                        enforced.
                       type: boolean
                   type: object
                 customLinks:
@@ -72,7 +88,9 @@ spec:
                   description: DefaultNodeCount is the default number of replicas for the initial MachineDeployment.
                   type: integer
                 defaultQuota:
-                  description: DefaultProjectResourceQuota allows to configure a default project resource quota which will be set for all projects that do not have a custom quota already set. EE-version only.
+                  description: |-
+                    DefaultProjectResourceQuota allows to configure a default project resource quota which
+                    will be set for all projects that do not have a custom quota already set. EE-version only.
                   properties:
                     quota:
                       description: Quota specifies the default CPU, Memory and Storage quantities for all the projects.
@@ -136,10 +154,16 @@ spec:
                 machineDeploymentOptions:
                   properties:
                     autoUpdatesEnabled:
-                      description: AutoUpdatesEnabled enables the auto updates option for machine deployments on the dashboard. In case of flatcar linux, this will enable automatic updates through update engine and for other operating systems, this will enable package updates on boot for the machines.
+                      description: |-
+                        AutoUpdatesEnabled enables the auto updates option for machine deployments on the dashboard.
+                        In case of flatcar linux, this will enable automatic updates through update engine and for other operating systems,
+                        this will enable package updates on boot for the machines.
                       type: boolean
                     autoUpdatesEnforced:
-                      description: AutoUpdatesEnforced enforces the auto updates option for machine deployments on the dashboard. In case of flatcar linux, this will enable automatic updates through update engine and for other operating systems, this will enable package updates on boot for the machines.
+                      description: |-
+                        AutoUpdatesEnforced enforces the auto updates option for machine deployments on the dashboard.
+                        In case of flatcar linux, this will enable automatic updates through update engine and for other operating systems,
+                        this will enable package updates on boot for the machines.
                       type: boolean
                   type: object
                 machineDeploymentVMResourceQuota:
