--- a/pkg/crd/k8c.io/kubermatic.k8c.io_mlaadminsettings.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_mlaadminsettings.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.14.0
     kubermatic.k8c.io/location: master,seed
   name: mlaadminsettings.kubermatic.k8c.io
 spec:
@@ -22,18 +22,31 @@ spec:
       name: v1
       schema:
         openAPIV3Schema:
-          description: MLAAdminSetting is the object representing cluster-specific administrator settings for KKP user cluster MLA (monitoring, logging & alerting) stack.
+          description: |-
+            MLAAdminSetting is the object representing cluster-specific administrator settings
+            for KKP user cluster MLA (monitoring, logging & alerting) stack.
           properties:
             apiVersion:
-              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              description: |-
+                APIVersion defines the versioned schema of this representation of an object.
+                Servers should convert recognized schemas to the latest internal value, and
+                may reject unrecognized values.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
               type: string
             kind:
-              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              description: |-
+                Kind is a string value representing the REST resource this object represents.
+                Servers may infer this from the endpoint the client submits requests to.
+                Cannot be updated.
+                In CamelCase.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
               type: string
             metadata:
               type: object
             spec:
-              description: Spec describes the cluster-specific administrator settings for KKP user cluster MLA (monitoring, logging & alerting) stack.
+              description: |-
+                Spec describes the cluster-specific administrator settings for KKP user cluster MLA
+                (monitoring, logging & alerting) stack.
               properties:
                 clusterName:
                   description: ClusterName is the name of the user cluster whose MLA settings are defined in this object.
