--- a/pkg/crd/k8c.io/kubermatic.k8c.io_projects.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_projects.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.14.0
     kubermatic.k8c.io/location: master,seed
   name: projects.kubermatic.k8c.io
 spec:
@@ -28,13 +28,25 @@ spec:
       name: v1
       schema:
         openAPIV3Schema:
-          description: Project is the type describing a project. A project is a collection of SSH keys, clusters and members. Members are assigned by creating UserProjectBinding objects.
+          description: |-
+            Project is the type describing a project. A project is a collection of
+            SSH keys, clusters and members. Members are assigned by creating UserProjectBinding
+            objects.
           properties:
             apiVersion:
-              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              description: |-
+                APIVersion defines the versioned schema of this representation of an object.
+                Servers should convert recognized schemas to the latest internal value, and
+                may reject unrecognized values.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
               type: string
             kind:
-              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              description: |-
+                Kind is a string value representing the REST resource this object represents.
+                Servers may infer this from the endpoint the client submits requests to.
+                Cannot be updated.
+                In CamelCase.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
               type: string
             metadata:
               type: object
@@ -51,7 +63,10 @@ spec:
               description: Status holds the current status of the project.
               properties:
                 phase:
-                  description: Phase describes the project phase. New projects are in the `Inactive` phase; after being reconciled they move to `Active` and during deletion they are `Terminating`.
+                  description: |-
+                    Phase describes the project phase. New projects are in the `Inactive`
+                    phase; after being reconciled they move to `Active` and during deletion
+                    they are `Terminating`.
                   enum:
                     - Active
                     - Inactive
