--- a/pkg/crd/k8c.io/kubermatic.k8c.io_usersshkeys.yaml
+++ b/pkg/crd/k8c.io/kubermatic.k8c.io_usersshkeys.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.13.0
+    controller-gen.kubebuilder.io/version: v0.14.0
     kubermatic.k8c.io/location: master,seed
   name: usersshkeys.kubermatic.k8c.io
 spec:
@@ -37,10 +37,19 @@ spec:
           description: UserSSHKey specifies a users UserSSHKey.
           properties:
             apiVersion:
-              description: 'APIVersion defines the versioned schema of this representation of an object. Servers should convert recognized schemas to the latest internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              description: |-
+                APIVersion defines the versioned schema of this representation of an object.
+                Servers should convert recognized schemas to the latest internal value, and
+                may reject unrecognized values.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources
               type: string
             kind:
-              description: 'Kind is a string value representing the REST resource this object represents. Servers may infer this from the endpoint the client submits requests to. Cannot be updated. In CamelCase. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              description: |-
+                Kind is a string value representing the REST resource this object represents.
+                Servers may infer this from the endpoint the client submits requests to.
+                Cannot be updated.
+                In CamelCase.
+                More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds
               type: string
             metadata:
               type: object
@@ -52,16 +61,22 @@ spec:
                     type: string
                   type: array
                 fingerprint:
-                  description: Fingerprint is calculated server-side based on the supplied public key and doesn't need to be set by clients.
+                  description: |-
+                    Fingerprint is calculated server-side based on the supplied public key
+                    and doesn't need to be set by clients.
                   type: string
                 name:
                   description: Name is the human readable name for this SSH key.
                   type: string
                 owner:
-                  description: 'Owner is the name of the User object that owns this SSH key. Deprecated: This field is not used anymore.'
+                  description: |-
+                    Owner is the name of the User object that owns this SSH key.
+                    Deprecated: This field is not used anymore.
                   type: string
                 project:
-                  description: Project is the name of the Project object that this SSH key belongs to. This field is immutable.
+                  description: |-
+                    Project is the name of the Project object that this SSH key belongs to.
+                    This field is immutable.
                   type: string
                 publicKey:
                   description: PublicKey is the SSH public key.
