--- a/charts/oauth/templates/ingress.yaml
+++ b/charts/oauth/templates/ingress.yaml
@@ -18,6 +18,9 @@ kind: Ingress
 metadata:
   name: dex
   annotations:
+    {{- range $key, $value := .Values.dex.ingress.annotations }}
+    {{ $key }}: {{ tpl ($value | toString) $ | quote }}
+    {{- end }}
     kubernetes.io/ingress.class: "{{ .Values.dex.ingress.class }}"
     {{- with .Values.dex.certIssuer }}
     {{- if eq .kind "ClusterIssuer" }}
