--- a/cmd/http-prober/Dockerfile
+++ b/cmd/http-prober/Dockerfile
@@ -12,7 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM docker.io/alpine:3.18
-LABEL maintainer="support@kubermatic.com"
+FROM docker.io/alpine:3.19
+LABEL org.opencontainers.image.source="https://github.com/kubermatic/kubermatic/blob/main/cmd/http-prober/Dockerfile"
+LABEL org.opencontainers.image.vendor="Kubermatic"
+LABEL org.opencontainers.image.authors="support@kubermatic.com"
 
-COPY ./http-prober /usr/local/bin/
+COPY ./_build/http-prober /usr/local/bin/
